<resources>
    <string name="app_name">Simon</string>
    <string name="play_btn">PLAY</string>
    <string name="reset_game_btn">reset game</string>
    <string name="level_four_colors">4 COLORS</string>
    <string name="level_six_colors">6 COLORS</string>
    <string name="level_eight_colors">8 COLORS</string>
    <string name="confirm_restart">confirm restart</string>
    <string name="confirm_restart_message">Are you sure you want to restart your game?</string>
    <string name="no">NO</string>
    <string name="yes">yes</string>
    <string name="game_restarted">game progress restarted</string>
    <string name="game_over">GAME OVER</string>
    <string name="replay">REPLAY</string>
    <string name="exit">EXIT</string>
    <string name="repeat_after_me">Repeat after me</string>
    <string name="score">Score:</string>
    <string name="best_score">"Best score: "</string>
    <string name="tap_to_play">Tap to Play</string>
    <string name="pause">Pause</string>
    <string name="game_not_restated">game prograss did not restarted</string>
</resources>