<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/game_backgroud"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray_light"
        android:alpha="0.3"
        android:id="@+id/simon_background_paused"
        android:visibility="invisible">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/simon_logo"
            android:layout_gravity="center"
            android:scaleType="fitCenter"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="180dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_after_me"
            style="@style/TextViewRepeat"
            android:id="@+id/repeat"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="300dp"
            android:id="@+id/pauseBtn"
            android:background="@drawable/ic_pause_foreground"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/level1_layout"
        android:visibility="invisible"
        android:layoutDirection="ltr">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/ic_level1_top_left"
                android:id="@+id/level1_button_top_left"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/ic_level1_top_right"
                android:id="@+id/level1_button_top_right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/ic_level1_bottom_left"
                android:id="@+id/level1_button_bottom_left"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/ic_level1_bottom_right"
                android:id="@+id/level1_button_bottom_right"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/level2_layout"
        android:visibility="invisible"
        android:layoutDirection="ltr">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/level2_left_top"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_level2_left_top" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_level2_left_bottom"
                    android:id="@+id/level2_left_bottom"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/level2_right_top"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_level2_right_top" />


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_level2_right_bottom"
                    android:id="@+id/level2_right_bottom"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_level2_left_center"
                android:id="@+id/level2_left_center"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/ic_level2_right_center"
                android:id="@+id/level2_right_center"/>


        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/level3_layout"
        android:visibility="invisible"
        android:layoutDirection="ltr">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/level3_left_top1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_level3_left_top1"
                />

            <ImageView
                android:id="@+id/level3_right_top1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_level3_right_top1"
                android:layout_marginLeft="80dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/layout2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_level3_left_top2"
                android:id="@+id/level3_left_top2"
                android:layout_marginTop="25dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_level3_right_top2"
                android:id="@+id/level3_right_top2"
                android:layout_toRightOf="@+id/level3_left_top2"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_level3_left_bottom1"
                android:id="@+id/level3_left_bottom1" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_level3_right_bottom1"
                android:id="@+id/level3_right_bottom1"
                android:layout_toRightOf="@+id/level3_left_bottom1"
                android:layout_marginLeft="30dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_level3_left_bottom2"
                android:id="@+id/level3_left_bottom2"
                android:layout_marginTop="25dp"
                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_level3_right_bottom2"
                android:id="@+id/level3_right_bottom2"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="25dp"/>

        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bestScoreLayout"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:id="@+id/score"
                style="@style/TextViewScore"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/score"
                android:id="@+id/currentScore"
                style="@style/TextViewScore"/>

        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/bestScoreLayout"
        android:layout_marginBottom="100dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score"
                android:id="@+id/bestScore"
                style="@style/TextViewScore"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bestScoreUpdate"
                android:layout_toEndOf="@id/bestScore"
                style="@style/TextViewScore"/>
        </RelativeLayout>
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pauseLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:text="@string/tap_to_play"
            style="@style/TextViewTapToPlay"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:text="@string/pause"
            style="@style/TextViewPause"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:id="@+id/backToPlay"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_play_foreground"
            />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:src="@drawable/welldone_animation"
        android:padding="70dp"
        android:id="@+id/welldone_animation"/>

</RelativeLayout>